/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.1.1/userguide/building_java_projects.html
 */

plugins {
    id 'java'
    id 'war'
    id 'application'
}

sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven { url "https://jcenter.bintray.com/" }
}

dependencies {   
    implementation fileTree(dir: '../libs', include: '*.jar')

    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
    testImplementation 'junit:junit:4.4'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'

    implementation 'com.github.jbellis:jamm:0.4.0'
    implementation 'io.github.9ins:chaosgraph:2.1.2'
    implementation 'com.google.code.gson:gson:2.8.8'
    implementation 'com.googlecode.mp4parser:isoparser:1.1.22' 
    implementation 'org.yaml:snakeyaml:1.29'
    
    implementation 'commons-cli:commons-cli:1.5.0'
    implementation 'org.apache.commons:commons-imaging:1.0-alpha2'
    implementation 'org.java-websocket:Java-WebSocket:1.3.0'      
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
    implementation 'com.oracle.database.jdbc:ojdbc8:23.2.0.0'
    implementation 'org.hibernate:hibernate-entitymanager:5.6.6.Final' 
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.4'
}

application {
    // Define the main class for the application.
    mainClass = 'org.chaostocosmos.leap.Leap'
}

jar {
    archiveFileName = 'leap.jar'
    manifest {
        attributes(
            'Main-Class': 'org.chaostocosmos.leap.Leap' // Your main class
        )
    }
    // Include all dependencies and handle duplicates
    from { 
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    } {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE // or DuplicatesStrategy.INCLUDE to keep them
    }
    //exclude 'org/chaostocosmos/leap/service/impl/**'
}

// war {
//     archiveFileName = 'leap.war'  // Optional: specify the output WAR file name
//     destinationDirectory = file("$buildDir/libs")  // Optional: customize the destination
//     manifest {
//         attributes 'Main-Class': 'org.chaostocosmos.leap.LeapApp'  // Ensure this points to your main class
//     }    
// }

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
